BUG: 122317

Fix deletion of MSN contact.
Delete MSNContact instance when the remove command is confirmed by MSN Notification server.


svn path=/branches/kopete/0.12/kopete/; revision=513817