protocols/msn/msnaccount.cpp
@@ -1062,6 +1062,7 @@ void MSNAccount::slotContactRemoved( const QString& handle, const QString& list,
 		// The FL list only use the contact GUID, use the contact referenced by the GUID.
 		MSNContact *contactRemoved = findContactByGuid(contactGuid);
 		QStringList groupGuidList;
+		bool deleteContact = groupGuid.isEmpty() ? true : false; // Delete the contact when the group GUID is empty.
 		// Remove the contact from the contact list for all the group he is a member.
 		if( groupGuid.isEmpty() )
 		{
@@ -1111,6 +1112,11 @@ void MSNAccount::slotContactRemoved( const QString& handle, const QString& list,
 						m_notifySocket->removeGroup( *stringIt );
 				}
 			}
+		}
+		if(deleteContact && contactRemoved)
+		{
+			kdDebug(14140) << k_funcinfo << "Deleting the MSNContact " << contactRemoved->contactId() << endl;
+			contactRemoved->deleteLater();
 		}
 	}
 }
@@ -1371,13 +1377,13 @@ void MSNAccount::addContactServerside(const QString &contactId, QPtrList<Kopete:
 
 MSNContact *MSNAccount::findContactByGuid(const QString &contactGuid)
 {
-	kdDebug(14140) << k_funcinfo << endl;
+	kdDebug(14140) << k_funcinfo << "Looking for " << contactGuid << endl;
 	QDictIterator<Kopete::Contact> it( contacts() );
 	for ( ; it.current(); ++it )
 	{
-		MSNContact *c = static_cast<MSNContact *>( *it );
+		MSNContact *c = dynamic_cast<MSNContact *>( it.current() );
 
-		if(c && c->property( MSNProtocol::protocol()->propGuid ).value().toString() == contactGuid )
+		if(c && c->guid() == contactGuid )
 		{
 			kdDebug(14140) << k_funcinfo << "OK found a contact. " << endl;
 			// Found the contact GUID
